# quran-studio

./: AudioManagerCPP.swift  AudioManagerSimple.swift  AudioTest.swift  AudioTestSimple.swift  CLAUDE.md  CMakeLists.txt  CPPAudioTest.swift  Info.plist  README.md  TECHNICAL_OVERVIEW.md  code.txt  complete_project_fix.py  create_minimal_working_project.py  documentation.md  fix_file_paths.py  fix_project_structure.py  organize_files.py  plan.md
Reverb/: ContentView.swift  ContentViewCPP.swift  ContentViewSimple.swift  CustomReverbView.swift  README.md  RecordingHistory.swift  Reverb-Bridging-Header.h  ReverbApp.swift
Reverb.xcodeproj/: project.pbxproj  project.pbxproj.backup  project.pbxproj.complete_backup  project.pbxproj.minimal_backup
Reverb.xcodeproj/project.xcworkspace/xcuserdata/a.xcuserdatad/: UserInterfaceState.xcuserstate
Reverb.xcodeproj/xcuserdata/a.xcuserdatad/xcschemes/: xcschememanagement.plist
Reverb/Assets.xcassets/AccentColor.colorset/: Contents.json
Reverb/Audio/: AudioManager.swift  AudioManagerCPP.swift  AudioManagerProtocol.swift  AudioManagerUltraSimple.swift  RecordingSessionManager.swift  SwiftAudioManager.swift  WetDryRecordingManager.swift  iOSAudioBridge.swift
Reverb/Audio/DSP/: ParameterSmoothing.hpp
Reverb/Audio/Models/: ReverbPreset.swift
Reverb/Audio/Optimization/: ARM64Optimizations.hpp  BackgroundAudioManager.swift  BackgroundAudioManageriOS.swift  InstrumentsProfiler.swift  MemoryBatteryManager.hpp  MemoryBatteryManager.swift  NonBlockingAudioRecorder.h  NonBlockingAudioRecorder.mm  NonBlockingAudioRecorder.mm.backup  OptimizedAudioBridge.h  OptimizedAudioBridge.mm  OptimizedAudioBridge.mm.broken  OptimizedAudioBridge.mm.disabled  vDSPIntegration.hpp
Reverb/Audio/Services/: AudioEngineService.swift  AudioInterruptionHandler.swift  AudioQualityValidator.swift  BatchOfflineProcessor.swift  CrossPlatformAudioSession.swift  OfflineReverbProcessor.swift  RecordingService.swift  WetDryAudioEngine.swift  iOSRecordingManager.swift
Reverb/Audio/Testing/: CrossPlatformAudioComparator.swift  iOSTapRecordingValidator.swift
Reverb/CPPEngine/: CrossFeed.hpp  FDNReverb.cpp  Parameters.cpp  Parameters.hpp  ReverbEngine.cpp
Reverb/CPPEngine/AudioBridge/: AudioIOBridge.h  AudioIOBridge.mm  ReverbBridge.h  ReverbBridge.mm
Reverb/CPPEngine/Utils/: AudioMath.cpp
Reverb/Documentation/: OfflineProcessingArchitecture.md  WetDryRecordingArchitecture.md  iOSCompatibilityGuide.md  iOSInterfaceAdaptationGuide.md  iOSOptimizationGuide.md
Reverb/Shared/DSP/: AudioBuffer.hpp  CrossFeed.cpp  CrossFeed.hpp  FDNReverb.cpp  FDNReverb.hpp  ReverbEngine.cpp  ReverbEngine.hpp
Reverb/Views/: BatchProcessingView.swift  OfflineProcessingView.swift  RecordingControlsView.swift  WetDryRecordingView.swift
Reverb/Views/iOS/: iOSAudioSessionInfoView.swift  iOSCompactViews.swift  iOSCustomReverbView.swift  iOSMainView.swift  iOSOnboardingView.swift  iOSPermissionManager.swift  iOSPresetSelectorView.swift  iOSRealtimeView.swift  iOSSettingsView.swift
Reverb/Views/iOS/Adapters/: ResponsiveParameterController.swift
Reverb/Views/iOS/Testing/: ParameterResponseTester.swift
ReverbAU/: AUParameterAutomation.swift  DAWCompatibilityTester.swift  DualModeManager.swift  Info.plist  MainInterface.storyboard  ReverbAudioUnit.swift  ReverbAudioUnitViewController.swift
VoiceMonitorPro-v2/: CMakeLists.txt  README.md
VoiceMonitorPro-v2/Scripts/: build_ios.sh
VoiceMonitorPro-v2/Shared/DSP/: AudioBuffer.cpp  FDNReverb.cpp  FDNReverb.hpp  ReverbEngine.cpp  ReverbEngine.hpp
VoiceMonitorPro-v2/Shared/Utils/: AudioMath.hpp
VoiceMonitorPro-v2/VoiceMonitorPro/: ContentView.swift  CustomReverbSettings.swift  Info.plist  ReverbPreset.swift  VoiceMonitorPro-Bridging-Header.h  VoiceMonitorProApp.swift
VoiceMonitorPro-v2/VoiceMonitorPro.xcodeproj/: project.pbxproj
VoiceMonitorPro-v2/VoiceMonitorPro/Assets.xcassets/AccentColor.colorset/: Contents.json
VoiceMonitorPro-v2/VoiceMonitorProApp.xcodeproj/: project.pbxproj
VoiceMonitorPro-v2/iOS/: AudioIOBridge.mm  ReverbBridge.mm
VoiceMonitorPro-v2/iOS/AudioBridge/: AudioIOBridge.h  AudioIOBridge.mm  ReverbBridge.h
VoiceMonitorPro-v2/iOS/UI/: SwiftAudioManager.swift
